# personal-secure-node

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  cli.py  create_identity(only_run_1_time).py  drive.py  export_pubkey.py  psn-core.md  psn-protocol.md  pyproject.toml  requirements.txt
docs/: CURRENT_IMPLEMENTATION.md  DIGITAL_SUBJECT_THEORY.md  DISASTER_BACKUP.md  HTTP_API.md  METADATA_BACKUP.md  MOBILE_BACKUP.md  PLUGIN_TRUST_MODEL.md  PRODUCT.md  PSN_BIRTH_PLAN.md  PSN_CHINESE_FOUNDATION_DRAFT.md  PSN_CHINESE_FOUNDATION_V1.md  RELEASE_DEPLOYMENT.md  SERVER_DEPLOYMENT.md  SERVICE_OPERATIONS.md  STORAGE_ARCHITECTURE.md  SYNC_PROTOCOL.md  THREAT_MODEL.md  WEB_UI.md  WINDOWS_SYNC.md  architecture.md
docs/digital-subject-rewrite/: README.md
docs/digital-subject-rewrite/community-edition-v0.1/: DIGITAL_SUBJECT_COMMUNITY_CN_V0.1.md
docs/digital-subject-rewrite/manuscript-v0.2/: DIGITAL_SUBJECT_MANUSCRIPT_V0.2.md
origin/: ORIGIN.md
psn/: crypto.py  dns_resolver.py  identity.py  network.py  protocol.py
psn_drive/: __init__.py  auth.py  cli.py  crypto.py  database.py  device_client.py  device_keys.py  disaster_backup.py  errors.py  http_api.py  release.py  server_config.py  service_runtime.py  storage.py  sync_client.py  sync_lock.py  tls.py  vault.py
psn_drive/web/: app.js  index.html  styles.css
tests/: test_drive.py
