[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "psn-drive"
version = "0.17.0"
description = "A local-first, self-hosted personal data vault prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=44,<47",
  "dnspython>=2.7,<3",
]

[project.scripts]
psn-drive = "psn_drive.cli:main"

[tool.setuptools.packages.find]
include = ["psn", "psn.*", "psn_drive", "psn_drive.*"]

[tool.setuptools.package-data]
psn_drive = ["web/*"]
